syn-state-machine/src/snapshots/syn_state_machine__common_tokens__external_blocks__tests__it_matches_item.snap
---
source: syn-state-machine/src/common_tokens.rs
expression: "crate::parse::<ExternalItem<Infallible,\n        MBox<Type<Infallible>>>>(::quote::quote! {\n            fn with_name(format : * const u8) ;\n        })"
---
Ok(
    (
        Function(
            [],
            None,
            Function {
                qualifiers: FunctionQualifiers {
                    const: false,
                    async: false,
                    unsafe: false,
                    extern: None,
                },
                ident: Ident(
                    with_name,
                ),
                generic_params: None,
                where_clause: None,
                self_param: None,
                args: [
                    (
                        [],
                        Patterned(
                            PatternWithoutRange(
                                IdentifierPattern(
                                    IdentifierPattern {
                                        ref: false,
                                        mut: false,
                                        id: Ident(
                                            format,
                                        ),
                                        at_pattern: None,
                                    },
                                ),
                            ),
                            Val0(
                                NoBounds(
                                    RawPointer(
                                        Const(
                                            TypePath(
                                                TypePath {
                                                    leading: false,
                                                    segments: [
                                                        Simple {
                                                            id: Id(
                                                                Ident(
                                                                    u8,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
                returns: None,
                body: None,
            },
        ),
        0,
    ),
)
